--- a/data/.env
+++ b/data/.env
@@ -1,4 +1,4 @@
-BASE_URL=https://vue3-course-api.hexschool.io
-API_PATH=bonobo19537
-ADMIN_USERNAME=dk0748@gmail.com
-ADMIN_PASSWORD=moho7474
+BASE_URL=
+API_PATH=
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
