--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vee-validate/i18n": "^4.4.7",
-    "@vee-validate/rules": "^4.4.7",
+    "@vee-validate/i18n": "^4.4.9",
+    "@vee-validate/rules": "^4.4.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "canvas-confetti": "^1.4.0",
     "core-js": "^3.6.5",
     "mitt": "^2.0.1",
     "path-to-regexp": "^6.2.0",
-    "vee-validate": "^4.4.8",
+    "vee-validate": "^4.4.9",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
+    "vue-loading-overlay": "^4.0.3",
     "vue-router": "^4.0.10",
     "vue3-loading-overlay": "^0.0.0"
   },
