--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@vee-validate/i18n": "^4.4.9",
     "@vee-validate/rules": "^4.4.9",
     "axios": "^0.21.1",
